# Quinn2025-RobustReplicableAge

./: .gitignore  README.md  bigmeg-0-preproc_cambridge_preproc-slurm.py  bigmeg-0-preproc_cambridge_preproc-slurm.sh  bigmeg-0-preproc_camcan_preproc-slurm.py  bigmeg-0-preproc_camcan_preproc-slurm.sh  bigmeg-0-preproc_camcan_preproc-stats.py  bigmeg-0-preproc_nottingham_preproc-slurm.py  bigmeg-0-preproc_nottingham_preproc-slurm.sh  bigmeg-0-preproc_oxford_preproc-slurm.py  bigmeg-0-preproc_oxford_preproc-slurm.sh  bigmeg-1a_group-glm-perms_age-only.py  bigmeg-1b_group-glm-perms_age-with-covariates.py  bigmeg-1c_group-glm-perms_age-only-variant-preproc.py  bigmeg-1d_group-glm-perms_age-only-variant-headpos.py  bigmeg-3a_figures123_camcan-age-only.py  bigmeg-3b_figures45_alldata-age-only.py  bigmeg-3c_figures6_camcan-age-only-absolute.py  bigmeg-3d_figures78_camcan-age-covariates.py  bigmeg_utils.py  pyproject.toml  pyproject_paths.toml
figures/: bigmeg-camcan_draft-table3.txt
subj_data/: all_collated_camb.csv  all_collated_camcan.csv  all_collated_notts.csv  all_collated_oxford.csv
